--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.0
   flutter_ffmpeg: ^0.4.0
+  video_thumbnail: ^2.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
